[package]
name = "rs-packet-capture"
version = "0.1.0"
authors = ["lambdalisue <lambdalisue@hashnote.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
anyhow = "1.0.32"
thiserror = "1.0.20"
pnet = "0.26.0"
